# ml_algs

./: .gitignore  pyproject.toml
examples/: example_classification.py
examples/nlp/: byte-pair-tokenizer.py  generating_names_bengio.ipynb  generating_names_trigram.ipynb
examples/nlp/data/: create_names.py  names.txt  random.txt
examples/perceptron/: example_perceptron.py
ml_algs/adaline/: __init__.py  adaline.py  adaline_gd.py  adaline_sgd.py
ml_algs/classification/adaline/: adaline_gd.py  adaline_sgd.py
ml_algs/classification/perceptron/: perceptron.py
ml_algs/logistic_regression/: __init__.py  logistic_regression_sgd.py
ml_algs/neural_nets/simple_net/: __init__.py  simple_net.py
ml_algs/neural_nets/ybengio_03/: __init__.py  bengio.py
ml_algs/perceptron/: perceptron.py
tests/adaline/: test_adaline.py  test_adaline_gd.py  test_adaline_sgd.py
tests/classification/adaline/: test_adaline_gd.py  test_adaline_sgd.py
tests/classification/logistic_regression/: test_logistic_regression_sgd.py
tests/classification/perceptron/: test_perceptron.py
tests/logistic_regression/: test_logistic_regression_sgd.py
tests/perceptron/: test_perceptron.py
