[tool.poetry]
name = "ml-algs"
version = "0.1.0"
description = ""
authors = ["Jakub Porubcansky <jakub.porubcansky@tangent.works>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
scikit-learn = "^1.5.0"


[tool.poetry.group.examples.dependencies]
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
